# Synth

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
browser/: grounding.js  manager.py
core/: agent.py  knowledge.py  planner.py  state.py  tools.py
projects/saucedemo/: config.yaml
scripts/: test_grounding.py  test_hierarchy.py  test_project_agent.py  test_verification.py
